# Soccer-assessment-program

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: setup_mac.sh
src/soccer_ai_mvp/: calibrate.py  check_mps.py  cli.py  config.py  devices.py  homography.py  render.py  report.py  state.py  team_color.py
web_prototype/: app.js  index.html  styles.css
